--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <hr>
 
     <h3>This is where you needto go</h3>
-    <a href="htps://www.google.com/maps/@10.5524045,7.4651913,3a,75y,98.59h,99.13t/data=!3m6!1e1!3m4!1sKfXClDf7Ep2ml9o4NshhbA!2e0!7i13312!8i6656" >address</a>
+    <a href="https://www.google.com/maps/@10.5524045,7.4651913,3a,75y,94.1h,94.37t/data=!3m6!1e1!3m4!1sKfXClDf7Ep2ml9o4NshhbA!2e0!7i13312!8i6656" >address</a>
 
 </body>
 </html>
